--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,6 @@
 @use './base';
 @use './abstract';
+@import './theme';
 
 html,
 body {
@@ -7,5 +8,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  color: $orange;
+  @include themed {
+    background-color: t("base3");
+  }
 }
 
