--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,5 @@
 @use './base';
-@use './abstract' as global;
+@use './abstract' as g;
 @import './theme';
 
 
@@ -16,7 +16,7 @@ html {
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   
-    background-color: global.$background-color;
+    background-color: g.$background-color;
   
   
   }
