--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -17,8 +17,10 @@ $blue-2 :var(--blue-2);
 $blue-3 :var(--blue-3);
 
 /*  ATR COLORS  */
+
 $blue-4 :var(--blue-4);
 $text-color : var(--text-color);
 $background-color : var(--background-color);
 $light-shadow:var(--light-shadow);
-$search-gray:var(--search-gray)
+$search-gray:var(--search-gray);
+$nav-title-color: var(--nav-title-color);
