push avant de faire des conneries

--- a/src/styles/theme/_theme.scss
+++ b/src/styles/theme/_theme.scss
@@ -33,6 +33,7 @@
   --text-color: var(--green-5);
   --light-shadow : var(--blue-4);
   --search-gray: var(--gray-light);
+  --nav-title-color: var(--green-3);
 
 
 }
