create auth page

--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -15,6 +15,8 @@ $green-5 :var(--green-5);
 $blue-1 :var(--blue-1);
 $blue-2 :var(--blue-2);
 $blue-3 :var(--blue-3);
+$blue-4 :var(--blue-4);
+$blue-5 :var(--blue-5);
 
 /*  ATR COLORS  */
 
@@ -24,3 +26,5 @@ $background-color : var(--background-color);
 $light-shadow:var(--light-shadow);
 $search-gray:var(--search-gray);
 $nav-title-color: var(--nav-title-color);
+$button-check : var(--button-check);
+$reverse-text-color : var(--reverse-text-color);
