--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -20,6 +20,7 @@ $blue-5 :var(--blue-5);
 
 /*  ATR COLORS  */
 
+$white : var(--white);
 $blue-4 :var(--blue-4);
 $text-color : var(--text-color);
 $background-color : var(--background-color);
