--- a/src/components/elements/auth/auth.module.scss
+++ b/src/components/elements/auth/auth.module.scss
@@ -16,7 +16,7 @@
       ".";
 
     &__header {
-
+        z-index: 10;
         background-color: g.$background-color;
         box-shadow: 0 0 5px g.$light-shadow;
         display: flex;
@@ -47,11 +47,19 @@
         justify-content: space-between;
 
         & form {
+            transition: all ease-in .2s;
+        }
+
+        &.green {
+            background-color: g.$green-3;
+        }
+        &.white {
+            background-color: g.$white;
+        }
+        &.blue {
+            background-color: g.$green-5;
         }
     }
-
-
-
 
 
     button {
