--- a/src/components/elements/connectForm/connectForm.module.scss
+++ b/src/components/elements/connectForm/connectForm.module.scss
@@ -4,7 +4,8 @@
 .form {
 
     background-color: g.$white;
-    border-radius: 0px 0px 150% 150% / 0px 0px 100% 100%;
+    border-radius: 0px 0px 100% 100% / 0px 0px 50px 50px;
+
 
 
     &.isActive {
