--- a/src/components/elements/header/header.module.scss
+++ b/src/components/elements/header/header.module.scss
@@ -1,6 +1,9 @@
 @use '/src/styles/abstract/' as g;
 
 .header {
+    position: sticky;
+    top:0;
+    z-index: 99;
     display: grid;
     grid-template-columns: 20% 60% 20%;
     grid-template-rows: g.$header-h;
@@ -10,7 +13,7 @@
     height: 100%;
     margin: 0;
     background-color: g.$background-color;
-    box-shadow: 0 0 5px g.$light-shadow;
+    box-shadow: 0px 2px 2px g.$light-shadow;
 
 
     /*A DELETE*/
@@ -44,9 +47,20 @@
       align-items: center;
       &__icon {
         aspect-ratio: 1;
-        height: 70%;
+        height: 50%;
         width: auto;
-        margin:10%;
+        margin:0 5%;
+        position: relative;
+      }
+
+      &__logo {
+        aspect-ratio: 1;
+        height: 75%;
+        width: auto;
+
+        @media (max-width: 30em) {
+          display: none;
+        }
       }
     }
 
@@ -60,7 +74,7 @@
         aspect-ratio: 1;
         height: 60%;
         width: auto;
-        margin:10%;
+        margin:5%;
       }
     }
 
@@ -99,7 +113,7 @@
       &__icon {
         display: inline-block;
         aspect-ratio: 1;
-        width: 10%;
+        width: 5%;
         min-width: 25px;
         height: 100%;
         margin:0 5px ;
@@ -109,8 +123,4 @@
     
 }
   
-  /* For presentation only, no need to copy the code below */
-  
 
-  
-  
