--- a/src/components/elements/menuSideBar/menuSideBar.module.scss
+++ b/src/components/elements/menuSideBar/menuSideBar.module.scss
@@ -2,51 +2,88 @@
 
 
 .sideBar {
-    position: absolute;
-    top:0;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  user-select: none;
+
+$sidebarW : 270px;
+  @media (max-width: 900px){
+    &__unactive {
+      left: -999px !important; // javoue j'abuse
+     
+    }
+
+    .header * {
+      margin:5% 10px !important;
+    }
+    width : 100vw;
+
+  }
+  position: fixed;
+  top:0;
+  left:0;
+  width: $sidebarW;
+  max-width: 100vw;
+  height: 100vh;
+  z-index: 100 ;
+  display: grid; 
+  background-color: g.$background-color;
+  opacity: 1;
+  grid-template-columns: 100%; 
+  grid-template-rows: g.$header-h 1fr; 
+  gap: 0px 0px; 
+  grid-template-areas: 
+    "."
+    "."; 
+
+  transition: left .5s ease-in-out;
+  &__active {
     left:0;
-    width: 300px;
-    max-width: 100vw;
-    height: 100vh;
-    z-index: 100 ;
-    display: grid; 
-    background-color: g.$background-color;
-    opacity: 1;
-    grid-template-columns: 100%; 
-    grid-template-rows: g.$header-h 1fr; 
-    gap: 0px 0px; 
-    grid-template-areas: 
-      "."
-      "."; 
-    box-shadow: 0 0 5px g.$light-shadow;
+    
+  }
 
-      .header {
-          background-color: g.$green-3;
-          display: flex;
-          flex-direction: row;
-          flex-wrap: nowrap;
-          justify-content: space-around;
-          align-items: center;
+  &__unactive {
+    left:-($sidebarW + 50px);
+  }
 
+    .header {
+        background-color: g.$green-3;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
 
-          &__logo {
-            height: 70%;
-          }
-      }
+        & * {
+          margin:5%;
+          aspect-ratio: 1;
+          width: auto;
+        }
 
-      .navigation {
-          width: 100% ;
-          scrollbar-width: thin;
-          scrollbar-color: g.$green-3 g.$search-gray;
-          overflow-y: scroll;
-          overflow-x: hidden;
-          background-color: g.$background-color;
+        &__logo {
+          height: 70%;
+        }
 
-          ul {
-              padding: 5%;
-              padding-bottom: 0;
-          }
-      }
+        &__close {
+          height: 50%;
+        }
+    }
+
+    .navigation {
+        width: 100% ;
+        scrollbar-width: thin;
+        scrollbar-color: g.$green-3 g.$search-gray;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        background-color: g.$background-color;
+        box-shadow: 1px 0 2px g.$light-shadow;
+
+        ul {
+            padding: 5%;
+            padding-bottom: 0;
+        }
+    }
 
 }
 
