--- a/src/components/elements/nav_link/nav_link.module.scss
+++ b/src/components/elements/nav_link/nav_link.module.scss
@@ -8,6 +8,7 @@
 .nav {
     display: flex;
     flex-direction: column;
+    cursor: pointer;
     &__head {
         width: 100%;
         display: flex;
@@ -21,6 +22,14 @@
         display: flex;
         flex-direction: column;
         justify-content: left;
+
+        &___close {
+            display: none !important;
+        }
+
+        &___open {
+
+        }
     }
 
     & , &__nosub {
