--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -19,7 +19,7 @@ form {
 
 input {
     padding: 8px;
-    background-color: a.$gray-color;
+    background-color: a.$gray-light-extra;
     border-radius: 10px;
     font-size: 1.5em;
     font-weight: 300;
