Add Quilljs (finally works thx god)

--- a/src/components/elements/auth/auth.module.scss
+++ b/src/components/elements/auth/auth.module.scss
@@ -5,6 +5,7 @@
 
     width: 100vw;
     height: 100vh;
+    min-height: 650px;
     display: grid; 
     background-color: g.$background-color;
     opacity: 1;
