--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -13,5 +13,22 @@
     margin: 5px;
     max-width: 95vw;
     width: min-content;
+    border-radius: 5px;
 // 38x38
+}
+
+.userCard {
+    display: flex;
+    flex-direction:column ;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    box-shadow: gray;
+    box-shadow: 0px 0px 2px g.$light-shadow;
+    margin: 5px;
+    max-width: 95vw;
+    height: 300px;
+    width: min-content;
+    border-radius: 5px;
 }
