--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -23,9 +23,9 @@ input {
     border-radius: 10px;
     font-size: 1.5em;
     font-weight: 300;
-    min-width: 300px;
-    width: 50%;
-    max-width: 100vw;
+    // min-width: 300px;
+    width: 300px;
+    max-width: 90vw;
     text-align: center;
 }
 
