--- a/src/components/elements/card/card.module.scss
+++ b/src/components/elements/card/card.module.scss
@@ -41,7 +41,7 @@
     }
 
     &__image {
-        background-color: g.$gray-light-extra;
+        background-color: g.$green-1;
         text-align: center;
         vertical-align: middle;
         margin: 10px 0;
