--- a/src/components/elements/editResource/editResource.module.scss
+++ b/src/components/elements/editResource/editResource.module.scss
@@ -64,4 +64,9 @@
         justify-content: flex-start;
 
     }
+
+    .visibility {
+        display: flex;
+        width: 100% !important;
+    }
 }
